# sagexit

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml  deploy.yaml
resources/: docker-compose.yaml.template  entrypoint.sh  sagexit.nginx.conf
website/: manage.py
website/room_reservation/: __init__.py  admin.py  models.py  urls.py  views.py
website/room_reservation/migrations/: 0001_initial.py  0002_room_capacity.py  0003_remove_room_location.py  0004_reservation_block_whole_room.py
website/room_reservation/static/js/: calendar-init.js
website/room_reservation/static/scss/: index.scss
website/room_reservation/static/scss/fullcalendar/core/common/: _common.scss
website/room_reservation/static/scss/fullcalendar/daygrid/: main.scss
website/room_reservation/templates/room_reservation/: index.html
website/room_reservation/tests/: test_api.py
website/sagexit/: context_processors.py  urls.py  wsgi.py
website/sagexit/settings/: base.py  development.py  metadata  production.py
website/sagexit/static/scss/: main.scss
website/sagexit/templates/: base.html
website/users/: apps.py  forms.py  services.py  urls.py  views.py
website/users/templates/users/: login.html  logout.html  verify.html
